--- a/style.css
+++ b/style.css
@@ -87,3 +87,74 @@
     color: #444343;
     margin-left: 20px;
 }
+
+/* ==== my plans section css ==== */
+
+.plans-section-title {
+    margin-top: 130px;
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    line-height: 47px;
+    color: #151414;
+}
+
+.my-plans-container {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-bottom: 130px;
+}
+
+
+.plan-item-title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 35px;
+    color: #151414;
+    margin-bottom: 16px;
+}
+
+.plan-commitment {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 29px;
+    color: #737272;
+
+}
+
+.positive-mindset-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.positive-mindset {
+    width: 1140px;
+    background-image: url('./images/gradient1.png'), url('./images/watch.png');
+    background-repeat: no-repeat;
+    background-blend-mode: unset;
+    background-position: center;
+    padding: 60px 64px;
+    margin-bottom: 130px;
+}
+
+.positive-mindset>h2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+}
+
+.positive-mindset>button {
+    padding: 20px 36px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #005FAC;
+}
