--- a/style.css
+++ b/style.css
@@ -158,3 +158,63 @@
     text-align: center;
     color: #005FAC;
 }
+
+/* ==== footer section css ==== */
+.footer-section {
+    display: flex;
+    justify-content: space-around;
+    background-color: #151414;
+    color: #FFFFFF;
+    padding: 130px 0;
+}
+
+.social-media-link img {
+    padding-right: 16px;
+    margin-top: 32px;
+}
+
+.footer-section h2 {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #F8F8F8;
+    margin-bottom: 16px;
+
+}
+
+.footer-section h3 {
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-section p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-section .email-field {
+    height: 64px;
+    width: 325px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 21px;
+    color: #F3F3F3;
+    padding: 20px;
+}
+
+.subscribe-btn {
+    background-color: #005FAC;
+    padding: 20px 36px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FFFFFF;
+    border-radius: 10px;
+    margin-top: 16px;
+}
