--- a/style.css
+++ b/style.css
@@ -219,3 +219,36 @@
     border-radius: 10px;
     margin-top: 16px;
 }
+
+/* ==== my progress section css ==== */
+.progress-section {
+    margin-bottom: 120px;
+}
+
+.progress-section-title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    line-height: 47px;
+    color: #151414;
+}
+
+.progress {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.progress label {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 29px;
+    color: #737272;
+}
+
+.progress meter {
+    height: 60px;
+    width: 60%;
+}
+/* ==== END ==== */
